alphaindexes/5.5.x/rpccommands.md
# Modules RPC Commands

([A](#A)) ([B](#B)) ([C](#C)) ([D](#D)) ([E](#E)) ([F](#F)) ([G](#g))
([H](#H)) ([I](#I)) ([J](#J)) ([K](#K)) ([L](#L)) ([M](#M)) ([N](#n))
([O](#O)) ([P](#P)) ([Q](#Q)) ([R](#R)) ([S](#S)) ([T](#T)) ([U](#u))
([V](#V)) ([W](#W)) ([X](#X)) ([Y](#Y)) ([Z](#z))

## \[A\]

| Name                          | Module Path | Module Name                                                                                                                |
|-------------------------------|-------------|----------------------------------------------------------------------------------------------------------------------------|
| **app_jsdt.api_list**         | *modules*   | [app_jsdt](http://www.kamailio.org/docs/modules/5.5.x/modules/app_jsdt.html#app_jsdt.r.api_list)                           |
| **app_jsdt.reload**           | *modules*   | [app_jsdt](http://www.kamailio.org/docs/modules/5.5.x/modules/app_jsdt.html#app_jsdt.r.reload)                             |
| **app_lua.api_list**          | *modules*   | [app_lua](http://www.kamailio.org/docs/modules/5.5.x/modules/app_lua.html#app_lua.r.api_list)                              |
| **app_lua.list**              | *modules*   | [app_lua](http://www.kamailio.org/docs/modules/5.5.x/modules/app_lua.html#app_lua.r.list)                                  |
| **app_lua.reload**            | *modules*   | [app_lua](http://www.kamailio.org/docs/modules/5.5.x/modules/app_lua.html#app_lua.r.reload)                                |
| **app_perl.get_reset_cycles** | *modules*   | [app_perl](http://www.kamailio.org/docs/modules/5.5.x/modules/app_perl.html#app_perl.r.get_reset_cycles)                   |
| **app_perl.set_reset_cycles** | *modules*   | [app_perl](http://www.kamailio.org/docs/modules/5.5.x/modules/app_perl.html#app_perl.r.set_reset_cycles)                   |
| **app_python.api_list**       | *modules*   | [app_python](http://www.kamailio.org/docs/modules/5.5.x/modules/app_python.html#app_python.r.api_list)                     |
| **app_python.api_list**       | *modules*   | [app_python3](http://www.kamailio.org/docs/modules/5.5.x/modules/app_python3.html#app_python3.r.api_list)                  |
| **app_python.reload**         | *modules*   | [app_python](http://www.kamailio.org/docs/modules/5.5.x/modules/app_python.html#app_python.r.reload)                       |
| **app_python.reload**         | *modules*   | [app_python3](http://www.kamailio.org/docs/modules/5.5.x/modules/app_python3.html#app_python3.r.reload)                    |
| **app_ruby.api_list**         | *modules*   | [app_ruby](http://www.kamailio.org/docs/modules/5.5.x/modules/app_ruby.html#app_ruby.r.api_list)                           |
| **app_ruby.reload**           | *modules*   | [app_ruby](http://www.kamailio.org/docs/modules/5.5.x/modules/app_ruby.html#app_ruby.r.reload)                             |
| **app_sqlang.api_list**       | *modules*   | [app_sqlang](http://www.kamailio.org/docs/modules/5.5.x/modules/app_sqlang.html#app_sqlang.r.api_list)                     |
| **app_sqlang.reload**         | *modules*   | [app_sqlang](http://www.kamailio.org/docs/modules/5.5.x/modules/app_sqlang.html#app_sqlang.r.reload)                       |
| **autheph.add_secret**        | *modules*   | [auth_ephemeral](http://www.kamailio.org/docs/modules/5.5.x/modules/auth_ephemeral.html#auth_eph.rpc.autheph.add_secret)   |
| **autheph.dump_secrets**      | *modules*   | [auth_ephemeral](http://www.kamailio.org/docs/modules/5.5.x/modules/auth_ephemeral.html#auth_eph.rpc.autheph.dump_secrets) |
| **autheph.rm_secret**         | *modules*   | [auth_ephemeral](http://www.kamailio.org/docs/modules/5.5.x/modules/auth_ephemeral.html#auth_eph.rpc.autheph.rm_secret)    |

## \[B\]

| Name                          | Module Path | Module Name                                                                                                  |
|-------------------------------|-------------|--------------------------------------------------------------------------------------------------------------|
| **benchmark.enable_global**   | *modules*   | [benchmark](http://www.kamailio.org/docs/modules/5.5.x/modules/benchmark.html#benchmark.rpc.enable_global)   |
| **benchmark.enable_timer**    | *modules*   | [benchmark](http://www.kamailio.org/docs/modules/5.5.x/modules/benchmark.html#benchmark.rpc.enable_timer)    |
| **benchmark.granularity**     | *modules*   | [benchmark](http://www.kamailio.org/docs/modules/5.5.x/modules/benchmark.html#benchmark.rpc.granularity)     |
| **benchmark.loglevel**        | *modules*   | [benchmark](http://www.kamailio.org/docs/modules/5.5.x/modules/benchmark.html#benchmark.rpc.loglevel)        |
| **benchmark.timer_list**      | *modules*   | [benchmark](http://www.kamailio.org/docs/modules/5.5.x/modules/benchmark.html#benchmark.rpc.timer_list)      |
| **benchmark.timer_name_list** | *modules*   | [benchmark](http://www.kamailio.org/docs/modules/5.5.x/modules/benchmark.html#benchmark.rpc.timer_name_list) |

## \[C\]

| Name                           | Module Path | Module Name                                                                                                 |
|--------------------------------|-------------|-------------------------------------------------------------------------------------------------------------|
| **call_obj.free**              | *modules*   | [call_obj](http://www.kamailio.org/docs/modules/5.5.x/modules/call_obj.html#call_obj.rpc.free)              |
| **call_obj.free_all**          | *modules*   | [call_obj](http://www.kamailio.org/docs/modules/5.5.x/modules/call_obj.html#call_obj.rpc.free_all)          |
| **call_obj.list**              | *modules*   | [call_obj](http://www.kamailio.org/docs/modules/5.5.x/modules/call_obj.html#call_obj.rpc.list)              |
| **call_obj.stats**             | *modules*   | [call_obj](http://www.kamailio.org/docs/modules/5.5.x/modules/call_obj.html#call_obj.rpc.stats)             |
| **cdp.disable_peer**           | *modules*   | [cdp](http://www.kamailio.org/docs/modules/5.5.x/modules/cdp.html)                                          |
| **cdp.enable_peer**            | *modules*   | [cdp](http://www.kamailio.org/docs/modules/5.5.x/modules/cdp.html)                                          |
| **cfgt.clean**                 | *modules*   | [cfgt](http://www.kamailio.org/docs/modules/5.5.x/modules/cfgt.html#cfgt.r.clean)                           |
| **cfgt.list**                  | *modules*   | [cfgt](http://www.kamailio.org/docs/modules/5.5.x/modules/cfgt.html#cfgt.r.list)                            |
| **cfgt.mask**                  | *modules*   | [cfgt](http://www.kamailio.org/docs/modules/5.5.x/modules/cfgt.html#cfgt.r.mask)                            |
| **cfgutils.check_config_hash** | *modules*   | [cfgutils](http://www.kamailio.org/docs/modules/5.5.x/modules/cfgutils.html#cfgutils.rpc.check_config_hash) |
| **cfgutils.get_config_hash**   | *modules*   | [cfgutils](http://www.kamailio.org/docs/modules/5.5.x/modules/cfgutils.html#cfgutils.rpc.get_config_hash)   |
| **cfgutils.get_gflags**        | *modules*   | [cfgutils](http://www.kamailio.org/docs/modules/5.5.x/modules/cfgutils.html#cfgutils.rpc.get_gflags)        |
| **cfgutils.is_gflag**          | *modules*   | [cfgutils](http://www.kamailio.org/docs/modules/5.5.x/modules/cfgutils.html#cfgutils.rpc.is_gflag)          |
| **cfgutils.rand_get_prob**     | *modules*   | [cfgutils](http://www.kamailio.org/docs/modules/5.5.x/modules/cfgutils.html#cfgutils.rpc.rand_get_prob)     |
| **cfgutils.rand_reset_prob**   | *modules*   | [cfgutils](http://www.kamailio.org/docs/modules/5.5.x/modules/cfgutils.html#cfgutils.rpc.rand_reset_prob)   |
| **cfgutils.rand_set_prop**     | *modules*   | [cfgutils](http://www.kamailio.org/docs/modules/5.5.x/modules/cfgutils.html#cfgutils.rpc.rand_set_prob)     |
| **cfgutils.reset_gflag**       | *modules*   | [cfgutils](http://www.kamailio.org/docs/modules/5.5.x/modules/cfgutils.html#cfgutils.rpc.reset_gflag)       |
| **cfgutils.set_gflag**         | *modules*   | [cfgutils](http://www.kamailio.org/docs/modules/5.5.x/modules/cfgutils.html#cfgutils.rpc.set_gflag)         |
| **cnxcc.active_clients**       | *modules*   | [cnxcc](http://www.kamailio.org/docs/modules/5.5.x/modules/cnxcc.html#cnxcc.rpc.active_clients)             |
| **cnxcc.check_client**         | *modules*   | [cnxcc](http://www.kamailio.org/docs/modules/5.5.x/modules/cnxcc.html#cnxcc.rpc.check_client)               |
| **cnxcc.kill_call**            | *modules*   | [cnxcc](http://www.kamailio.org/docs/modules/5.5.x/modules/cnxcc.html#cnxcc.rpc.kill_call)                  |
| **cnxcc.stats**                | *modules*   | [cnxcc](http://www.kamailio.org/docs/modules/5.5.x/modules/cnxcc.html#cnxcc.rpc.stats)                      |
| **core.aliases_list**          | *modules*   | [kex](http://www.kamailio.org/docs/modules/5.5.x/modules/kex.html#kex.r.core.aliases_list)                  |
| **core.arg**                   | *modules*   | [kex](http://www.kamailio.org/docs/modules/5.5.x/modules/kex.html#kex.r.core.arg)                           |
| **core.echo**                  | *modules*   | [kex](http://www.kamailio.org/docs/modules/5.5.x/modules/kex.html#kex.r.core.echo)                          |
| **core.flags**                 | *modules*   | [kex](http://www.kamailio.org/docs/modules/5.5.x/modules/kex.html#kex.r.core.flags)                         |
| **core.info**                  | *modules*   | [kex](http://www.kamailio.org/docs/modules/5.5.x/modules/kex.html#kex.r.core.info)                          |
| **core.kill**                  | *modules*   | [kex](http://www.kamailio.org/docs/modules/5.5.x/modules/kex.html#kex.r.core.kill)                          |
| **core.modules**               | *modules*   | [kex](http://www.kamailio.org/docs/modules/5.5.x/modules/kex.html#kex.r.core.modules)                       |
| **core.ppdefines**             | *modules*   | [kex](http://www.kamailio.org/docs/modules/5.5.x/modules/kex.html#kex.r.core.ppdefines)                     |
| **core.printi**                | *modules*   | [kex](http://www.kamailio.org/docs/modules/5.5.x/modules/kex.html#kex.r.core.printi)                        |
| **core.prints**                | *modules*   | [kex](http://www.kamailio.org/docs/modules/5.5.x/modules/kex.html#kex.r.core.prints)                        |
| **core.ps**                    | *modules*   | [kex](http://www.kamailio.org/docs/modules/5.5.x/modules/kex.html#kex.r.core.ps)                            |
| **core.psx**                   | *modules*   | [kex](http://www.kamailio.org/docs/modules/5.5.x/modules/kex.html#kex.r.core.psx)                           |
| **core.pwd**                   | *modules*   | [kex](http://www.kamailio.org/docs/modules/5.5.x/modules/kex.html#kex.r.core.pwd)                           |
| **core.shmmem**                | *modules*   | [kex](http://www.kamailio.org/docs/modules/5.5.x/modules/kex.html#kex.r.core.shmmem)                        |
| **core.sockets_list**          | *modules*   | [kex](http://www.kamailio.org/docs/modules/5.5.x/modules/kex.html#kex.r.core.sockets_list)                  |
| **core.tcp_info**              | *modules*   | [kex](http://www.kamailio.org/docs/modules/5.5.x/modules/kex.html#kex.r.core.tcp_info)                      |
| **core.tcp_list**              | *modules*   | [kex](http://www.kamailio.org/docs/modules/5.5.x/modules/kex.html#kex.r.core.tcp_list)                      |
| **core.tcp_options**           | *modules*   | [kex](http://www.kamailio.org/docs/modules/5.5.x/modules/kex.html#kex.r.core.tcp_options)                   |
| **core.udp4_raw_info**         | *modules*   | [kex](http://www.kamailio.org/docs/modules/5.5.x/modules/kex.html#kex.r.core.udp4_raw_info)                 |
| **core.uptime**                | *modules*   | [kex](http://www.kamailio.org/docs/modules/5.5.x/modules/kex.html#kex.r.core.uptime)                        |
| **core.version**               | *modules*   | [kex](http://www.kamailio.org/docs/modules/5.5.x/modules/kex.html#kex.r.core.version)                       |
| **corex.debug**                | *modules*   | [corex](http://www.kamailio.org/docs/modules/5.5.x/modules/corex.html#corex.rpc.debug)                      |
| **corex.list_aliases**         | *modules*   | [corex](http://www.kamailio.org/docs/modules/5.5.x/modules/corex.html#corex.rpc.list_aliases)               |
| **corex.list_sockets**         | *modules*   | [corex](http://www.kamailio.org/docs/modules/5.5.x/modules/corex.html#corex.rpc.list_sockets)               |
| **corex.pkg_summary**          | *modules*   | [corex](http://www.kamailio.org/docs/modules/5.5.x/modules/corex.html#corex.rpc.pkg_summary)                |
| **corex.shm.info**             | *modules*   | [corex](http://www.kamailio.org/docs/modules/5.5.x/modules/corex.html#corex.rpc.shm.info)                   |
| **corex.shm.stats**            | *modules*   | [corex](http://www.kamailio.org/docs/modules/5.5.x/modules/corex.html#corex.rpc.shm.stats)                  |
| **corex.shm_status**           | *modules*   | [corex](http://www.kamailio.org/docs/modules/5.5.x/modules/corex.html#corex.rpc.shm_status)                 |
| **corex.shm_summary**          | *modules*   | [corex](http://www.kamailio.org/docs/modules/5.5.x/modules/corex.html#corex.rpc.shm_summary)                |
| **cpl.get**                    | *modules*   | [cplc](http://www.kamailio.org/docs/modules/5.5.x/modules/cplc.html#cpl.r.get)                              |
| **cpl.load**                   | *modules*   | [cplc](http://www.kamailio.org/docs/modules/5.5.x/modules/cplc.html#cpl.r.load)                             |
| **cpl.remove**                 | *modules*   | [cplc](http://www.kamailio.org/docs/modules/5.5.x/modules/cplc.html#cpl.r.remove)                           |

## \[D\]

| Name                          | Module Path | Module Name                                                                                                  |
|-------------------------------|-------------|--------------------------------------------------------------------------------------------------------------|
| **dbg.bp**                    | *modules*   | [debugger](http://www.kamailio.org/docs/modules/5.5.x/modules/debugger.html#dbg.r.bp)                        |
| **dbg.get_mod_facility**      | *modules*   | [debugger](http://www.kamailio.org/docs/modules/5.5.x/modules/debugger.html#dbg.r.get_mod_facility)          |
| **dbg.get_mod_level**         | *modules*   | [debugger](http://www.kamailio.org/docs/modules/5.5.x/modules/debugger.html#dbg.r.get_mod_level)             |
| **dbg.ls**                    | *modules*   | [debugger](http://www.kamailio.org/docs/modules/5.5.x/modules/debugger.html#dbg.r.ls)                        |
| **dbg.mod_level**             | *modules*   | [debugger](http://www.kamailio.org/docs/modules/5.5.x/modules/debugger.html#dbg.r.mod_level)                 |
| **dbg.reset_msgid**           | *modules*   | [debugger](http://www.kamailio.org/docs/modules/5.5.x/modules/debugger.html#dbg.r.reset_msgid)               |
| **dbg.set_mod_facility**      | *modules*   | [debugger](http://www.kamailio.org/docs/modules/5.5.x/modules/debugger.html#dbg.r.set_mod_facility)          |
| **dbg.set_mod_level**         | *modules*   | [debugger](http://www.kamailio.org/docs/modules/5.5.x/modules/debugger.html#dbg.r.set_mod_level)             |
| **dbg.trace**                 | *modules*   | [debugger](http://www.kamailio.org/docs/modules/5.5.x/modules/debugger.html#dbg.r.trace)                     |
| **db_berkely.reload**         | *modules*   | [db_berkeley](http://www.kamailio.org/docs/modules/5.5.x/modules/db_berkeley.html#db_berkely.rpc.reload)     |
| **dialplan.dump**             | *modules*   | [dialplan](http://www.kamailio.org/docs/modules/5.5.x/modules/dialplan.html#dialplan.r.dp.dump)              |
| **dialplan.reload**           | *modules*   | [dialplan](http://www.kamailio.org/docs/modules/5.5.x/modules/dialplan.html#dialplan.r.dp.reload)            |
| **dialplan.translate**        | *modules*   | [dialplan](http://www.kamailio.org/docs/modules/5.5.x/modules/dialplan.html#dialplan.r.dp.translate)         |
| **dispatcher.add**            | *modules*   | [dispatcher](http://www.kamailio.org/docs/modules/5.5.x/modules/dispatcher.html#dispatcher.r.add)            |
| **dispatcher.hash**           | *modules*   | [dispatcher](http://www.kamailio.org/docs/modules/5.5.x/modules/dispatcher.html#dispatcher.r.hash)           |
| **dispatcher.list**           | *modules*   | [dispatcher](http://www.kamailio.org/docs/modules/5.5.x/modules/dispatcher.html#dispatcher.r.list)           |
| **dispatcher.ping_active**    | *modules*   | [dispatcher](http://www.kamailio.org/docs/modules/5.5.x/modules/dispatcher.html#dispatcher.r.ping_active)    |
| **dispatcher.reload**         | *modules*   | [dispatcher](http://www.kamailio.org/docs/modules/5.5.x/modules/dispatcher.html#dispatcher.r.reload)         |
| **dispatcher.remove**         | *modules*   | [dispatcher](http://www.kamailio.org/docs/modules/5.5.x/modules/dispatcher.html#dispatcher.r.remove)         |
| **dispatcher.set_duid_state** | *modules*   | [dispatcher](http://www.kamailio.org/docs/modules/5.5.x/modules/dispatcher.html#dispatcher.r.set_duid_state) |
| **dispatcher.set_state**      | *modules*   | [dispatcher](http://www.kamailio.org/docs/modules/5.5.x/modules/dispatcher.html#dispatcher.r.set_state)      |
| **dlg.bridge_dlg**            | *modules*   | [dialog](http://www.kamailio.org/docs/modules/5.5.x/modules/dialog.html#dlg.r.bridge_dlg)                    |
| **dlg.bridge_dlg**            | *modules*   | [ims_dialog](http://www.kamailio.org/docs/modules/5.5.x/modules/ims_dialog.html)                             |
| **dlg.briefing**              | *modules*   | [dialog](http://www.kamailio.org/docs/modules/5.5.x/modules/dialog.html#dlg.r.briefing)                      |
| **dlg.dlg_list**              | *modules*   | [dialog](http://www.kamailio.org/docs/modules/5.5.x/modules/dialog.html#dlg.r.dlg_list)                      |
| **dlg.dlg_list**              | *modules*   | [ims_dialog](http://www.kamailio.org/docs/modules/5.5.x/modules/ims_dialog.html)                             |
| **dlg.dlg_list_ctx**          | *modules*   | [dialog](http://www.kamailio.org/docs/modules/5.5.x/modules/dialog.html#dlg.r.dlg_list_ctx)                  |
| **dlg.dlg_list_ctx**          | *modules*   | [ims_dialog](http://www.kamailio.org/docs/modules/5.5.x/modules/ims_dialog.html)                             |
| **dlg.dump_file**             | *modules*   | [dialog](http://www.kamailio.org/docs/modules/5.5.x/modules/dialog.html#dlg.r.dump_file)                     |
| **dlg.end_dlg**               | *modules*   | [dialog](http://www.kamailio.org/docs/modules/5.5.x/modules/dialog.html)                                     |
| **dlg.end_dlg**               | *modules*   | [ims_dialog](http://www.kamailio.org/docs/modules/5.5.x/modules/ims_dialog.html)                             |
| **dlg.is_alive**              | *modules*   | [dialog](http://www.kamailio.org/docs/modules/5.5.x/modules/dialog.html#dlg.r.is_alive)                      |
| **dlg.list**                  | *modules*   | [dialog](http://www.kamailio.org/docs/modules/5.5.x/modules/dialog.html#dlg.r.list)                          |
| **dlg.list**                  | *modules*   | [ims_dialog](http://www.kamailio.org/docs/modules/5.5.x/modules/ims_dialog.html)                             |
| **dlg.list_ctx**              | *modules*   | [dialog](http://www.kamailio.org/docs/modules/5.5.x/modules/dialog.html#dlg.r.list_ctx)                      |
| **dlg.list_ctx**              | *modules*   | [ims_dialog](http://www.kamailio.org/docs/modules/5.5.x/modules/ims_dialog.html)                             |
| **dlg.list_match**            | *modules*   | [dialog](http://www.kamailio.org/docs/modules/5.5.x/modules/dialog.html#dlg.r.list_match)                    |
| **dlg.list_match_ctx**        | *modules*   | [dialog](http://www.kamailio.org/docs/modules/5.5.x/modules/dialog.html#dlg.r.list_match_ctx)                |
| **dlg.profile_get_size**      | *modules*   | [dialog](http://www.kamailio.org/docs/modules/5.5.x/modules/dialog.html#dlg.r.profile_get_size)              |
| **dlg.profile_get_size**      | *modules*   | [ims_dialog](http://www.kamailio.org/docs/modules/5.5.x/modules/ims_dialog.html)                             |
| **dlg.profile_list**          | *modules*   | [dialog](http://www.kamailio.org/docs/modules/5.5.x/modules/dialog.html#dlg.r.profile_list)                  |
| **dlg.profile_list**          | *modules*   | [ims_dialog](http://www.kamailio.org/docs/modules/5.5.x/modules/ims_dialog.html)                             |
| **dlg.set_state**             | *modules*   | [dialog](http://www.kamailio.org/docs/modules/5.5.x/modules/dialog.html)                                     |
| **dlg.stats_active**          | *modules*   | [dialog](http://www.kamailio.org/docs/modules/5.5.x/modules/dialog.html#dlg.r.stats_active)                  |
| **dlg.terminate_dlg**         | *modules*   | [dialog](http://www.kamailio.org/docs/modules/5.5.x/modules/dialog.html#dlg.r.terminate_dlg)                 |
| **dlgs.briefing**             | *modules*   | [dlgs](http://www.kamailio.org/docs/modules/5.5.x/modules/dlgs.html#dlgs.rpc.briefing)                       |
| **dlgs.get**                  | *modules*   | [dlgs](http://www.kamailio.org/docs/modules/5.5.x/modules/dlgs.html#dlgs.rpc.get)                            |
| **dlgs.getall**               | *modules*   | [dlgs](http://www.kamailio.org/docs/modules/5.5.x/modules/dlgs.html#dlgs.rpc.getall)                         |
| **dlgs.list**                 | *modules*   | [dlgs](http://www.kamailio.org/docs/modules/5.5.x/modules/dlgs.html#dlgs.rpc.list)                           |
| **dlgs.stats**                | *modules*   | [dlgs](http://www.kamailio.org/docs/modules/5.5.x/modules/dlgs.html#dlgs.rpc.stats)                          |
| **dmq.list_nodes**            | *modules*   | [dmq](http://www.kamailio.org/docs/modules/5.5.x/modules/dmq.html#dmq.r.list_nodes)                          |
| **dmq.remove**                | *modules*   | [dmq](http://www.kamailio.org/docs/modules/5.5.x/modules/dmq.html#dmq.r.remove)                              |
| **domain.dump**               | *modules*   | [domain](http://www.kamailio.org/docs/modules/5.5.x/modules/domain.html#domain.rpc.dump)                     |
| **domain.reload**             | *modules*   | [domain](http://www.kamailio.org/docs/modules/5.5.x/modules/domain.html#domain.rpc.reload)                   |
| **drouting.reload**           | *modules*   | [drouting](http://www.kamailio.org/docs/modules/5.5.x/modules/drouting.html#drouting.rpc.reload)             |

## \[E\]

| Name            | Module Path | Module Name                                                                              |
|-----------------|-------------|------------------------------------------------------------------------------------------|
| **evrexec.run** | *modules*   | [evrexec](http://www.kamailio.org/docs/modules/5.5.x/modules/evrexec.html#evrexec.r.run) |

## \[F\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[G\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[H\]

| Name                             | Module Path | Module Name                                                                                                        |
|----------------------------------|-------------|--------------------------------------------------------------------------------------------------------------------|
| **htable.delete htable key**     | *modules*   | [htable](http://www.kamailio.org/docs/modules/5.5.x/modules/htable.html#htable.rpc.delete)                         |
| **htable.dump htable**           | *modules*   | [htable](http://www.kamailio.org/docs/modules/5.5.x/modules/htable.html#htable.rpc.dump)                           |
| **htable.flush htable**          | *modules*   | [htable](http://www.kamailio.org/docs/modules/5.5.x/modules/htable.html#htable.rpc.flush)                          |
| **htable.get htable key**        | *modules*   | [htable](http://www.kamailio.org/docs/modules/5.5.x/modules/htable.html#htable.rpc.get)                            |
| **htable.listTables**            | *modules*   | [htable](http://www.kamailio.org/docs/modules/5.5.x/modules/htable.html#htable.rpc.listtables)                     |
| **htable.reload htable**         | *modules*   | [htable](http://www.kamailio.org/docs/modules/5.5.x/modules/htable.html#htable.rpc.reload)                         |
| **htable.seti htable key value** | *modules*   | [htable](http://www.kamailio.org/docs/modules/5.5.x/modules/htable.html#htable.rpc.seti)                           |
| **htable.sets htable key value** | *modules*   | [htable](http://www.kamailio.org/docs/modules/5.5.x/modules/htable.html#htable.rpc.sets)                           |
| **htable.stats**                 | *modules*   | [htable](http://www.kamailio.org/docs/modules/5.5.x/modules/htable.html#htable.rpc.stats)                          |
| **htable.store htable**          | *modules*   | [htable](http://www.kamailio.org/docs/modules/5.5.x/modules/htable.html#htable.rpc.store)                          |
| **httpclient.listcon**           | *modules*   | [http_client](http://www.kamailio.org/docs/modules/5.5.x/modules/http_client.html#httpclient.r.httpclient.listcon) |

## \[I\]

| Name                 | Module Path | Module Name                                                                           |
|----------------------|-------------|---------------------------------------------------------------------------------------|
| **imc.list_members** | *modules*   | [imc](http://www.kamailio.org/docs/modules/5.5.x/modules/imc.html#imc.r.list_members) |
| **imc.list_rooms**   | *modules*   | [imc](http://www.kamailio.org/docs/modules/5.5.x/modules/imc.html#imc.r.list_rooms)   |

## \[J\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[K\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[L\]

| Name               | Module Path | Module Name                                                                           |
|--------------------|-------------|---------------------------------------------------------------------------------------|
| **lcr.defunct_gw** | *modules*   | [lcr](http://www.kamailio.org/docs/modules/5.5.x/modules/lcr.html#lcr.rpc.defunct_gw) |
| **lcr.dump_gws**   | *modules*   | [lcr](http://www.kamailio.org/docs/modules/5.5.x/modules/lcr.html#lcr.rpc.dump_gws)   |
| **lcr.dump_rules** | *modules*   | [lcr](http://www.kamailio.org/docs/modules/5.5.x/modules/lcr.html#lcr.rpc.dump_rules) |
| **lcr.load_gws**   | *modules*   | [lcr](http://www.kamailio.org/docs/modules/5.5.x/modules/lcr.html#lcr.rpc.load_gws)   |
| **lcr.reload**     | *modules*   | [lcr](http://www.kamailio.org/docs/modules/5.5.x/modules/lcr.html#lcr.rpc.reload)     |

## \[M\]

| Name                   | Module Path | Module Name                                                                                 |
|------------------------|-------------|---------------------------------------------------------------------------------------------|
| **matrix.reload**      | *modules*   | [matrix](http://www.kamailio.org/docs/modules/5.5.x/modules/matrix.html#matrix.rpc.reload)  |
| **mod.mem_stats**      | *modules*   | [kex](http://www.kamailio.org/docs/modules/5.5.x/modules/kex.html#kex.r.mod.mem_stats)      |
| **mod.mem_statsx**     | *modules*   | [kex](http://www.kamailio.org/docs/modules/5.5.x/modules/kex.html#kex.r.mod.mem_statsx)     |
| **mod.stats**          | *modules*   | [kex](http://www.kamailio.org/docs/modules/5.5.x/modules/kex.html#kex.r.mod.stats)          |
| **mohqueue.debug**     | *modules*   | [mohqueue](http://www.kamailio.org/docs/modules/5.5.x/modules/mohqueue.html#rpc.debug)      |
| **mohqueue.drop_call** | *modules*   | [mohqueue](http://www.kamailio.org/docs/modules/5.5.x/modules/mohqueue.html#rpc.drop_call)  |
| **mqueue.fetch**       | *modules*   | [mqueue](http://www.kamailio.org/docs/modules/5.5.x/modules/mqueue.html#mqueue.r.fetch)     |
| **mqueue.get_size**    | *modules*   | [mqueue](http://www.kamailio.org/docs/modules/5.5.x/modules/mqueue.html#mqueue.r.get_size)  |
| **mqueue.get_sizes**   | *modules*   | [mqueue](http://www.kamailio.org/docs/modules/5.5.x/modules/mqueue.html#mqueue.r.get_sizes) |
| **msrp.cmaplist**      | *modules*   | [msrp](http://www.kamailio.org/docs/modules/5.5.x/modules/msrp.html#msrp.r.msrp.cmaplist)   |
| **mtree.list**         | *modules*   | [mtree](http://www.kamailio.org/docs/modules/5.5.x/modules/mtree.html#mtree.rpc.list)       |
| **mtree.match**        | *modules*   | [mtree](http://www.kamailio.org/docs/modules/5.5.x/modules/mtree.html#mtree.rpc.match)      |
| **mtree.reload**       | *modules*   | [mtree](http://www.kamailio.org/docs/modules/5.5.x/modules/mtree.html#mtree.rpc.reload)     |
| **mtree.summary**      | *modules*   | [mtree](http://www.kamailio.org/docs/modules/5.5.x/modules/mtree.html#mtree.rpc.summary)    |

## \[N\]

| Name                      | Module Path | Module Name                                                                                            |
|---------------------------|-------------|--------------------------------------------------------------------------------------------------------|
| **nathelper.enable_ping** | *modules*   | [nathelper](http://www.kamailio.org/docs/modules/5.5.x/modules/nathelper.html#nathelper.r.enable_ping) |

## \[O\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[P\]

| Name                          | Module Path | Module Name                                                                                                    |
|-------------------------------|-------------|----------------------------------------------------------------------------------------------------------------|
| **pdb.activate**              | *modules*   | [pdb](http://www.kamailio.org/docs/modules/5.5.x/modules/pdb.html#pdb.r.activate)                              |
| **pdb.deactivate**            | *modules*   | [pdb](http://www.kamailio.org/docs/modules/5.5.x/modules/pdb.html#pdb.r.deactivate)                            |
| **pdb.status**                | *modules*   | [pdb](http://www.kamailio.org/docs/modules/5.5.x/modules/pdb.html#pdb.r.status)                                |
| **pdt.list**                  | *modules*   | [pdt](http://www.kamailio.org/docs/modules/5.5.x/modules/pdt.html)                                             |
| **pdt.reload**                | *modules*   | [pdt](http://www.kamailio.org/docs/modules/5.5.x/modules/pdt.html)                                             |
| **permissions.addressDump**   | *modules*   | [permissions](http://www.kamailio.org/docs/modules/5.5.x/modules/permissions.html#permissions.r.addressdump)   |
| **permissions.addressReload** | *modules*   | [permissions](http://www.kamailio.org/docs/modules/5.5.x/modules/permissions.html#permissions.r.addressreload) |
| **permissions.allowUri**      | *modules*   | [permissions](http://www.kamailio.org/docs/modules/5.5.x/modules/permissions.html#permissions.r.allowuri)      |
| **permissions.domainDump**    | *modules*   | [permissions](http://www.kamailio.org/docs/modules/5.5.x/modules/permissions.html#permissions.r.domaindump)    |
| **permissions.subnetDump**    | *modules*   | [permissions](http://www.kamailio.org/docs/modules/5.5.x/modules/permissions.html#permissions.r.subnetdump)    |
| **permissions.testUri**       | *modules*   | [permissions](http://www.kamailio.org/docs/modules/5.5.x/modules/permissions.html#permissions.r.testuri)       |
| **permissions.trustedDump**   | *modules*   | [permissions](http://www.kamailio.org/docs/modules/5.5.x/modules/permissions.html#permissions.r.trusteddump)   |
| **permissions.trustedReload** | *modules*   | [permissions](http://www.kamailio.org/docs/modules/5.5.x/modules/permissions.html#permissions.r.trustedreload) |
| **pike.top**                  | *modules*   | [pike](http://www.kamailio.org/docs/modules/5.5.x/modules/pike.html#pike.rpc.top)                              |
| **pkg.info**                  | *modules*   | [kex](http://www.kamailio.org/docs/modules/5.5.x/modules/kex.html#kex.r.pkg.info)                              |
| **pkg.stats**                 | *modules*   | [kex](http://www.kamailio.org/docs/modules/5.5.x/modules/kex.html#kex.r.pkg.stats)                             |
| **pl.get_pid**                | *modules*   | [pipelimit](http://www.kamailio.org/docs/modules/5.5.x/modules/pipelimit.html#pipelimit.r.pl.get_pid)          |
| **pl.get_pipes**              | *modules*   | [pipelimit](http://www.kamailio.org/docs/modules/5.5.x/modules/pipelimit.html#pipelimit.r.pl.get_pipes)        |
| **pl.list**                   | *modules*   | [pipelimit](http://www.kamailio.org/docs/modules/5.5.x/modules/pipelimit.html#pipelimit.r.pl.list)             |
| **pl.push_load**              | *modules*   | [pipelimit](http://www.kamailio.org/docs/modules/5.5.x/modules/pipelimit.html#pipelimit.r.pl.push_load)        |
| **pl.set_pid**                | *modules*   | [pipelimit](http://www.kamailio.org/docs/modules/5.5.x/modules/pipelimit.html#pipelimit.r.pl.set_pid)          |
| **pl.set_pipe**               | *modules*   | [pipelimit](http://www.kamailio.org/docs/modules/5.5.x/modules/pipelimit.html#pipelimit.r.pl.set_pipe)         |
| **pl.stats**                  | *modules*   | [pipelimit](http://www.kamailio.org/docs/modules/5.5.x/modules/pipelimit.html#pipelimit.r.pl.stats)            |
| **presence.cleanup**          | *modules*   | [presence](http://www.kamailio.org/docs/modules/5.5.x/modules/presence.html#presence.r.cleanup)                |
| **presence.presentity_list**  | *modules*   | [presence](http://www.kamailio.org/docs/modules/5.5.x/modules/presence.html#presence.rpc.presentity_list)      |
| **presence.refreshWatchers**  | *modules*   | [presence](http://www.kamailio.org/docs/modules/5.5.x/modules/presence.html#presence.r.refreshwatchers)        |
| **presence.updateWatchers**   | *modules*   | [presence](http://www.kamailio.org/docs/modules/5.5.x/modules/presence.html#presence.rpc.updatewatchers)       |
| **pua.cleanup**               | *modules*   | [pua](http://www.kamailio.org/docs/modules/5.5.x/modules/pua.html#pua.r.cleanup)                               |
| **pua.publish**               | *modules*   | [pua_rpc](http://www.kamailio.org/docs/modules/5.5.x/modules/pua_rpc.html#pua_rpc.r.pua.publish)               |
| **pua.send_publish**          | *modules*   | [pua_rpc](http://www.kamailio.org/docs/modules/5.5.x/modules/pua_rpc.html#pua_rpc.r.pua.send_publish)          |
| **pua.subscribe**             | *modules*   | [pua_rpc](http://www.kamailio.org/docs/modules/5.5.x/modules/pua_rpc.html#pua_rpc.r.subscribe)                 |
| **pv.shvGet**                 | *modules*   | [pv](http://www.kamailio.org/docs/modules/5.5.x/modules/pv.html#pv.rpc.shvget)                                 |
| **pv.shvSet**                 | *modules*   | [pv](http://www.kamailio.org/docs/modules/5.5.x/modules/pv.html#pv.rpc.shvset)                                 |

## \[Q\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[R\]

| Name                                   | Module Path | Module Name                                                                                                |
|----------------------------------------|-------------|------------------------------------------------------------------------------------------------------------|
| **regex.reload**                       | *modules*   | [regex](http://www.kamailio.org/docs/modules/5.5.x/modules/regex.html#regex.r.regex_reload)                |
| **regscscf.dereg_impu**                | *modules*   | [ims_registrar_scscf](http://www.kamailio.org/docs/modules/5.5.x/modules/ims_registrar_scscf.html)         |
| **rl.get_pid**                         | *modules*   | [ratelimit](http://www.kamailio.org/docs/modules/5.5.x/modules/ratelimit.html)                             |
| **rl.get_pipes**                       | *modules*   | [ratelimit](http://www.kamailio.org/docs/modules/5.5.x/modules/ratelimit.html)                             |
| **rl.get_queues**                      | *modules*   | [ratelimit](http://www.kamailio.org/docs/modules/5.5.x/modules/ratelimit.html)                             |
| **rl.push_load**                       | *modules*   | [ratelimit](http://www.kamailio.org/docs/modules/5.5.x/modules/ratelimit.html)                             |
| **rl.set_dbg**                         | *modules*   | [ratelimit](http://www.kamailio.org/docs/modules/5.5.x/modules/ratelimit.html)                             |
| **rl.set_pid**                         | *modules*   | [ratelimit](http://www.kamailio.org/docs/modules/5.5.x/modules/ratelimit.html)                             |
| **rl.set_pipe**                        | *modules*   | [ratelimit](http://www.kamailio.org/docs/modules/5.5.x/modules/ratelimit.html)                             |
| **rl.set_queue**                       | *modules*   | [ratelimit](http://www.kamailio.org/docs/modules/5.5.x/modules/ratelimit.html)                             |
| **rl.stats**                           | *modules*   | [ratelimit](http://www.kamailio.org/docs/modules/5.5.x/modules/ratelimit.html)                             |
| **rls.cleanup**                        | *modules*   | [rls](http://www.kamailio.org/docs/modules/5.5.x/modules/rls.html#rls.rpc.cleanup)                         |
| **rls.update_subs**                    | *modules*   | [rls](http://www.kamailio.org/docs/modules/5.5.x/modules/rls.html#rls.rpc.update_subs)                     |
| **rtpengine.enable proxy_url/all 0/1** | *modules*   | [rtpengine](http://www.kamailio.org/docs/modules/5.5.x/modules/rtpengine.html#rtpengine.r.enable)          |
| **rtpengine.get_hash_total**           | *modules*   | [rtpengine](http://www.kamailio.org/docs/modules/5.5.x/modules/rtpengine.html#rtpengine.m.show_hash_total) |
| **rtpengine.ping proxy_url/all**       | *modules*   | [rtpengine](http://www.kamailio.org/docs/modules/5.5.x/modules/rtpengine.html#rtpengine.m.ping)            |
| **rtpengine.reload**                   | *modules*   | [rtpengine](http://www.kamailio.org/docs/modules/5.5.x/modules/rtpengine.html#rtpengine.r.reload)          |
| **rtpengine.show proxy_url/all**       | *modules*   | [rtpengine](http://www.kamailio.org/docs/modules/5.5.x/modules/rtpengine.html#rtpengine.r.show)            |
| **rtpproxy.enable**                    | *modules*   | [rtpproxy](http://www.kamailio.org/docs/modules/5.5.x/modules/rtpproxy.html#rtpproxy.r.enable)             |
| **rtpproxy.list**                      | *modules*   | [rtpproxy](http://www.kamailio.org/docs/modules/5.5.x/modules/rtpproxy.html#rtpproxy.r.list)               |

## \[S\]

| Name                        | Module Path | Module Name                                                                                                     |
|-----------------------------|-------------|-----------------------------------------------------------------------------------------------------------------|
| **sctp.info**               | *modules*   | [sctp](http://www.kamailio.org/docs/modules/5.5.x/modules/sctp.html#sctp.r.sctp.info)                           |
| **sctp.options**            | *modules*   | [sctp](http://www.kamailio.org/docs/modules/5.5.x/modules/sctp.html#sctp.r.sctp.)                               |
| **sipcapture.status param** | *modules*   | [sipcapture](http://www.kamailio.org/docs/modules/5.5.x/modules/sipcapture.html#sipcapture.r.sipcapture.status) |
| **sipdump.enable**          | *modules*   | [sipdump](http://www.kamailio.org/docs/modules/5.5.x/modules/sipdump.html#sipdump.rpc.enable)                   |
| **siptrace.status param**   | *modules*   | [siptrace](http://www.kamailio.org/docs/modules/5.5.x/modules/siptrace.html#siptrace.r.siptrace.status)         |
| **stats.clear_statistics**  | *modules*   | [kex](http://www.kamailio.org/docs/modules/5.5.x/modules/kex.html#kex.r.stats.clear_statistics)                 |
| **stats.fetch**             | *modules*   | [kex](http://www.kamailio.org/docs/modules/5.5.x/modules/kex.html#kex.r.stats.fetch)                            |
| **stats.fetchn**            | *modules*   | [kex](http://www.kamailio.org/docs/modules/5.5.x/modules/kex.html#kex.r.stats.fetchn)                           |
| **stats.get_statistics**    | *modules*   | [kex](http://www.kamailio.org/docs/modules/5.5.x/modules/kex.html#kex.r.stats.get_statistics)                   |
| **stats.reset_statistics**  | *modules*   | [kex](http://www.kamailio.org/docs/modules/5.5.x/modules/kex.html#kex.r.stats.reset_statistics)                 |
| **statsc.report**           | *modules*   | [statsc](http://www.kamailio.org/docs/modules/5.5.x/modules/statsc.html#statsc.rpc.report)                      |
| **system.listMethods**      | *modules*   | [kex](http://www.kamailio.org/docs/modules/5.5.x/modules/kex.html#kex.r.system.listmethods)                     |
| **system.methodHelp**       | *modules*   | [kex](http://www.kamailio.org/docs/modules/5.5.x/modules/kex.html#kex.r.system.methodhelp)                      |
| **system.methodSignature**  | *modules*   | [kex](http://www.kamailio.org/docs/modules/5.5.x/modules/kex.html#kex.r.system.methodsignature)                 |

## \[T\]

| Name          | Module Path | Module Name                                                                                |
|---------------|-------------|--------------------------------------------------------------------------------------------|
| **ts.dump**   | *modules*   | [tsilo](http://www.kamailio.org/docs/modules/5.5.x/modules/tsilo.html#tsilo.rpc.ts.dump)   |
| **ts.lookup** | *modules*   | [tsilo](http://www.kamailio.org/docs/modules/5.5.x/modules/tsilo.html#tsilo.rpc.ts.lookup) |

## \[U\]

| Name                                | Module Path | Module Name                                                                                                              |
|-------------------------------------|-------------|--------------------------------------------------------------------------------------------------------------------------|
| **uac.reg_active**                  | *modules*   | [uac](http://www.kamailio.org/docs/modules/5.5.x/modules/uac.html#uac.r.uac.reg_active)                                  |
| **uac.reg_add**                     | *modules*   | [uac](http://www.kamailio.org/docs/modules/5.5.x/modules/uac.html#uac.r.uac.reg_add)                                     |
| **uac.reg_disable**                 | *modules*   | [uac](http://www.kamailio.org/docs/modules/5.5.x/modules/uac.html#uac.r.uac.reg_disable)                                 |
| **uac.reg_dump**                    | *modules*   | [uac](http://www.kamailio.org/docs/modules/5.5.x/modules/uac.html#uac.r.uac.reg_dump)                                    |
| **uac.reg_enable**                  | *modules*   | [uac](http://www.kamailio.org/docs/modules/5.5.x/modules/uac.html#uac.r.uac.reg_enable)                                  |
| **uac.reg_info**                    | *modules*   | [uac](http://www.kamailio.org/docs/modules/5.5.x/modules/uac.html#uac.r.uac.reg_info)                                    |
| **uac.reg_refresh**                 | *modules*   | [uac](http://www.kamailio.org/docs/modules/5.5.x/modules/uac.html#uac.r.uac.reg_refresh)                                 |
| **uac.reg_reload**                  | *modules*   | [uac](http://www.kamailio.org/docs/modules/5.5.x/modules/uac.html#uac.r.uac.reg_reload)                                  |
| **uac.reg_remove**                  | *modules*   | [uac](http://www.kamailio.org/docs/modules/5.5.x/modules/uac.html#uac.r.uac.reg_remove)                                  |
| **uac.reg_unregister**              | *modules*   | [uac](http://www.kamailio.org/docs/modules/5.5.x/modules/uac.html#uac.r.uac.reg_unregister)                              |
| **ul.add**                          | *modules*   | [usrloc](http://www.kamailio.org/docs/modules/5.5.x/modules/usrloc.html#usrloc.r.add)                                    |
| **ul.db_contacts**                  | *modules*   | [usrloc](http://www.kamailio.org/docs/modules/5.5.x/modules/usrloc.html#usrloc.r.db_contacts)                            |
| **ul.db_expired_contacts**          | *modules*   | [usrloc](http://www.kamailio.org/docs/modules/5.5.x/modules/usrloc.html#usrloc.r.db_expired_contacts)                    |
| **ul.db_users**                     | *modules*   | [usrloc](http://www.kamailio.org/docs/modules/5.5.x/modules/usrloc.html#usrloc.r.db_users)                               |
| **ul.dump**                         | *modules*   | [usrloc](http://www.kamailio.org/docs/modules/5.5.x/modules/usrloc.html#usrloc.r.dump)                                   |
| **ul.flush**                        | *modules*   | [usrloc](http://www.kamailio.org/docs/modules/5.5.x/modules/usrloc.html#usrloc.r.flush)                                  |
| **ul.lookup table AOR**             | *modules*   | [usrloc](http://www.kamailio.org/docs/modules/5.5.x/modules/usrloc.html#usrloc.r.lookup)                                 |
| **ul.rm table AOR**                 | *modules*   | [usrloc](http://www.kamailio.org/docs/modules/5.5.x/modules/usrloc.html#usrloc.r.rm)                                     |
| **ul.rm_contact table AOR contact** | *modules*   | [usrloc](http://www.kamailio.org/docs/modules/5.5.x/modules/usrloc.html#usrloc.r.rm_contact)                             |
| **ulpcscf.status**                  | *modules*   | [ims_usrloc_pcscf](http://www.kamailio.org/docs/modules/5.5.x/modules/ims_usrloc_pcscf.html)                             |
| **ulscscf.showimpu**                | *modules*   | [ims_usrloc_scscf](http://www.kamailio.org/docs/modules/5.5.x/modules/ims_usrloc_scscf.html#ims_usrloc_scscf.r.showimpu) |
| **ulscscf.snapshot**                | *modules*   | [ims_usrloc_scscf](http://www.kamailio.org/docs/modules/5.5.x/modules/ims_usrloc_scscf.html#ims_usrloc_scscf.r.snapshot) |
| **ulscscf.status**                  | *modules*   | [ims_usrloc_scscf](http://www.kamailio.org/docs/modules/5.5.x/modules/ims_usrloc_scscf.html#ims_usrloc_scscf.r.status)   |
| **userblocklist.reload_blocklist**  | *modules*   | [userblocklist](http://www.kamailio.org/docs/modules/5.5.x/modules/userblocklist.html#userblocklist.r.reload_blocklist)  |

## \[V\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[W\]

| Name           | Module Path | Module Name                                                                                             |
|----------------|-------------|---------------------------------------------------------------------------------------------------------|
| **ws.close**   | *modules*   | [websocket](http://www.kamailio.org/docs/modules/5.5.x/modules/websocket.html#websocket.rpc.ws.close)   |
| **ws.disable** | *modules*   | [websocket](http://www.kamailio.org/docs/modules/5.5.x/modules/websocket.html#websocket.rpc.ws.disable) |
| **ws.dump**    | *modules*   | [websocket](http://www.kamailio.org/docs/modules/5.5.x/modules/websocket.html#websocket.rpc.ws.dump)    |
| **ws.enable**  | *modules*   | [websocket](http://www.kamailio.org/docs/modules/5.5.x/modules/websocket.html#websocket.rpc.ws.enable)  |
| **ws.ping**    | *modules*   | [websocket](http://www.kamailio.org/docs/modules/5.5.x/modules/websocket.html#websocket.rpc.ws.ping)    |
| **ws.pong**    | *modules*   | [websocket](http://www.kamailio.org/docs/modules/5.5.x/modules/websocket.html#websocket.rpc.ws.pong)    |

## \[X\]

| Name                             | Module Path | Module Name                                                                                                       |
|----------------------------------|-------------|-------------------------------------------------------------------------------------------------------------------|
| **xcap_client.refreshXcapDoc**   | *modules*   | [xcap_client](http://www.kamailio.org/docs/modules/5.5.x/modules/xcap_client.html#xcap_client.rpc.refreshxcapdoc) |
| **xhttp_pi.reload**              | *modules*   | [xhttp_pi](http://www.kamailio.org/docs/modules/5.5.x/modules/xhttp_pi.html)                                      |
| **xhttp_prom.counter_inc**       | *modules*   | [xhttp_prom](http://www.kamailio.org/docs/modules/5.5.x/modules/xhttp_prom.html#xhttp_prom.rpc.counter_inc)       |
| **xhttp_prom.counter_reset**     | *modules*   | [xhttp_prom](http://www.kamailio.org/docs/modules/5.5.x/modules/xhttp_prom.html#xhttp_prom.rpc.counter_reset)     |
| **xhttp_prom.gauge_reset**       | *modules*   | [xhttp_prom](http://www.kamailio.org/docs/modules/5.5.x/modules/xhttp_prom.html#xhttp_prom.rpc.gauge_reset)       |
| **xhttp_prom.gauge_set**         | *modules*   | [xhttp_prom](http://www.kamailio.org/docs/modules/5.5.x/modules/xhttp_prom.html#xhttp_prom.rpc.gauge_set)         |
| **xhttp_prom.histogram_observe** | *modules*   | [xhttp_prom](http://www.kamailio.org/docs/modules/5.5.x/modules/xhttp_prom.html#xhttp_prom.rpc.histogram_observe) |
| **xhttp_prom.metric_list_print** | *modules*   | [xhttp_prom](http://www.kamailio.org/docs/modules/5.5.x/modules/xhttp_prom.html#xhttp_prom.rpc.metric_list_print) |

## \[Y\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[Z\]

| Name | Module Path | Module Name |
|------|-------------|-------------|
